Bug 303749 - Problem with loading of contact photos
Summary: Problem with loading of contact photos
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: Google Resource (other bugs)
Version First Reported In: 4.9
Platform: openSUSE Linux
: NOR normal
Target Milestone: 4.9
Assignee: Daniel Vrátil
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-18 16:46 UTC by Vojtěch Zeisek
Modified: 2012-10-19 10:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vojtěch Zeisek 2012-07-18 16:46:14 UTC
Contact photos are not loaded properly. Photos are not sometimes downloaded from Google. Reload does not help. Sometimes photo is "lost" - it is shown and suddenly it disappears.
Comment 1 Daniel Vrátil 2012-10-19 10:21:21 UTC
Git commit 6d3de83c3230f832c7db0933bd36117a282dfc06 by Dan Vrátil.
Committed on 19/10/2012 at 12:09.
Pushed by dvratil into branch 'KDE/4.9'.

Fetch Google contacts photos in batches to avoid reaching quota

The number of Google API requests per user per second is limited.
Fetching high amount of contact photos (usually at initial sync)
almost always hits the quota and so some contact photos are not
synced.

This commit queues the requests and sends them in batches. When we hit
the quota, the interval between batches is increased and the failed
requests are queued again.
FIXED-IN: 4.9.3

M  +62   -5    resources/google/contacts/contactsresource.cpp
M  +11   -2    resources/google/contacts/contactsresource.h

http://commits.kde.org/kdepim-runtime/6d3de83c3230f832c7db0933bd36117a282dfc06